unpackaged/main/default/objects/ia_crm__Allocation_Default_Group__c/ia_crm__Allocation_Default_Group__c.object-meta.xml
<CustomObject>
    <label>Allocation Default Group</label>
    <nameField>
        <label>Allocation Default Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Allocation Default Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>