unpackaged/main/default/objects/ia_crm__Allocation_Default_Group__c/fields/ia_crm__Department__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Department</label>
    <referenceTo>ia_crm__Department__c</referenceTo>
    <relationshipLabel>Allocation Default Groups</relationshipLabel>
    <relationshipName>Allocation_Default_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>