unpackaged/main/default/objects/ia_crm__Allocation_Default_Group__c/fields/ia_crm__Dimension_Default_Group__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Dimension_Default_Group__c</fullName>
    <label>Dimension Default Group</label>
    <referenceTo>ia_crm__Dimension_Default_Group__c</referenceTo>
    <relationshipLabel>Allocation Default Groups</relationshipLabel>
    <relationshipName>Allocation_Default_Groups</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>