unpackaged/main/default/objects/ia_crm__Allocation_Default_Group__c/fields/ia_crm__Intacct_Account_Credit__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Intacct_Account_Credit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intacct Account Credit</label>
    <referenceTo>ia_crm__Intacct_Account__c</referenceTo>
    <relationshipLabel>Allocation Default Groups (Intacct Account Credit)</relationshipLabel>
    <relationshipName>Allocation_Default_Groups1</relationshipName>
    <type>Lookup</type>
</CustomField>