unpackaged/main/default/objects/ia_crm__Allocation_Default_Group__c/fields/ia_crm__Percent__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Percent__c</fullName>
    <label>Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>