unpackaged/main/default/objects/ia_crm__Allocation_Default_Group__c/fields/ia_crm__Type__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Debit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>