unpackaged/main/default/objects/ia_crm__Allocation_Default_Group__c/listViews/ia_crm__All.listView-meta.xml
<ListView>
    <fullName>ia_crm__All</fullName>
    <columns>NAME</columns>
    <columns>ia_crm__Dimension_Default_Group__c</columns>
    <columns>ia_crm__Percent__c</columns>
    <columns>ia_crm__Intacct_Account_Credit__c</columns>
    <columns>ia_crm__Intacct_Account_Debit__c</columns>
    <columns>ia_crm__Intacct_Entity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>